2004-03-28    <larus@HomeMachine>

	* run.c:
	Changed CP0 timer to poll on Unix, since signals interrupt system
	calls and affect SPIM's I/O.

2004-03-25    <larus@HomeMachine>

	* display-utils.c, xspim.c windows.c:
	Made X interfaces a bit more compact and regular. Works on a
	1024x768 screen.

2004-03-22    <larus@HomeMachine>

	* parser.y [Margaret M Reek [mmr@cs.rit.edu]]:
	Add, rather than subtract, in expression: imm - imm.

2004-03-21    <larus@HomeMachine>

	* pervasive:
	Cleaned up splint warnings.
	Replaced sprintf calls with str-stream abstraction.

2004-03-12    <larus@HomeMachine>

	* pervasive:
	Renamed "trap" to "exception" to reflect MIPS terminology.
	Renamed trap.handler to exceptions.s.

	* inst.c inst.h parser.y run.c:
	Fix internal representation of instructions by separating FS from
	RS field and moving it RD and RD to SHAMT.

	* scanner.l [Akim Demaille <akim@epita.fr>]:
	Improve handling of escape sequence in strings to bring it close
	to ISO C strings.

	* spim.c:
	Introduced short command line arguments.
	Assumed first argument not starting with '-' is file name.

	* inst.h mem.c mem.h reg.h run.c spim-utils.c spim.c spim.h
	tt.io.s:
	Fixed implementation of console IO.
	Ensure that interrupts occur before instruction execution (and
	other exceptions afterwards), so that EPC points to instruciton to
	restart.

2004-03-11    <larus@HomeMachine>

	* mips-syscall.{c,h} spim-sycall.h syscall.{c,h}
	Moved all syscall-related stuff to syscall.{c,h} and eliminated
	old #ifdef'ed stuff related to syscalls from binary code running
	on DECstations.

2004-03-10    <larus@HomeMachine>

	* Changed memory access macros to functions.

2004-03-06    <larus@HomeMachine>

	* prevasive:
	Implemented MIPS32 instruction set.
	Eliminated coprocessor 3.
	Made coprocessor 2 operations raise coprocessor unimplemented trap
	(CpU).
	Modified exceptions and interrupts to conform to MIPS32 (ex when
	compiled -DMIPS1).
	Added CP0 timer.